# hermes-gpt

./: .gitignore  CHANGELOG.md  FEASIBILITY.md  LICENSE  README.md  RELEASE_CHECKLIST.md  codex_config.py  codex_core.py  codex_mcp.py  conftest.py  operator_codex.py  operator_config.py  operator_cron.py  operator_diagnostics.py  operator_policy.py  operator_skills.py  operator_workspace.py  pyproject.toml  server.py  test_codex_config.py  test_codex_core.py  test_codex_mcp.py  test_operator_codex.py  test_operator_cron.py  test_operator_diagnostics.py  test_operator_skills.py  test_operator_workspace.py  test_server.py  test_updater.py  updater.py  versioning.py  x-post-v0.4.0.md
.github/: release-body.md
.github/workflows/: ci.yml  publish.yml
docs/: codex.md  operator-mode.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.5.0.md  release-notes-v0.5.0b1.md  release-notes-v0.5.0b2.md  updating.md
site/: app.js  index.html  styles.css  vercel.json
site/.vercel/: project.json
