[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-gpt"
version = "0.5.0"
description = "Local-dev MCP sidecar for exposing selected Hermes Agent capabilities."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "hermes-gpt contributors" }
]
dependencies = [
  "mcp[cli]",
  "packaging>=23",
  "uvicorn",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
  "pyyaml",
]

[project.scripts]
hermes-gpt = "server:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "server",
  "operator_policy",
  "operator_cron",
  "operator_skills",
  "operator_config",
  "operator_workspace",
  "operator_diagnostics",
  "operator_codex",
  "codex_core",
  "codex_mcp",
  "codex_config",
  "updater",
  "versioning",
]

[tool.setuptools.data-files]
"share/hermes-gpt" = [
  "README.md",
  "pyproject.toml",
  "CHANGELOG.md",
]
"share/hermes-gpt/docs" = [
  "docs/operator-mode.md",
  "docs/release-notes-v0.2.0.md",
  "docs/release-notes-v0.3.0.md",
  "docs/release-notes-v0.4.0.md",
  "docs/codex.md",
  "docs/updating.md",
  "docs/release-notes-v0.5.0b1.md",
  "docs/release-notes-v0.5.0b2.md",
  "docs/release-notes-v0.5.0.md",
]
"share/hermes-gpt/examples" = [
  "examples/start-hermes-gpt.example.ps1",
  "examples/status-hermes-gpt.example.ps1",
  "examples/install-task.example.ps1",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q"
